--- a/app/config/doctrine_extensions.yml
+++ b/app/config/doctrine_extensions.yml
@@ -7,4 +7,4 @@ services:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
-            - [ setAnnotationReader, [ @annotation_reader ] ]
+            - [ setAnnotationReader, [ "@annotation_reader" ] ]
