--- a/src/AppBundle/Resources/config/routing/admin/routing_admin_card.yml
+++ b/src/AppBundle/Resources/config/routing/admin/routing_admin_card.yml
@@ -1,30 +1,30 @@
 admin_card:
-    pattern:  /
+    path:  /
     defaults: { _controller: "AppBundle:Card:index" }
 
 admin_card_show:
-    pattern:  /{id}/show
+    path:  /{id}/show
     defaults: { _controller: "AppBundle:Card:show" }
 
 admin_card_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "AppBundle:Card:new" }
 
 admin_card_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "AppBundle:Card:create" }
-    requirements: { _method: post }
+    methods: [ post ]
 
 admin_card_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "AppBundle:Card:edit" }
 
 admin_card_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "AppBundle:Card:update" }
-    requirements: { _method: post|put }
+    methods: [ post, put ]
 
 admin_card_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "AppBundle:Card:delete" }
-    requirements: { _method: post|delete }
+    methods: [ post, delete ]
