--- a/src/AppBundle/Resources/config/routing/admin/routing_admin_cycle.yml
+++ b/src/AppBundle/Resources/config/routing/admin/routing_admin_cycle.yml
@@ -1,30 +1,30 @@
 admin_cycle:
-    pattern:  /
+    path:  /
     defaults: { _controller: "AppBundle:Cycle:index" }
 
 admin_cycle_show:
-    pattern:  /{id}/show
+    path:  /{id}/show
     defaults: { _controller: "AppBundle:Cycle:show" }
 
 admin_cycle_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "AppBundle:Cycle:new" }
 
 admin_cycle_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "AppBundle:Cycle:create" }
-    requirements: { _method: post }
+    methods: [ post ]
 
 admin_cycle_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "AppBundle:Cycle:edit" }
 
 admin_cycle_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "AppBundle:Cycle:update" }
-    requirements: { _method: post|put }
+    methods: [ post, put ]
 
 admin_cycle_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "AppBundle:Cycle:delete" }
-    requirements: { _method: post|delete }
+    methods: [ post, delete ]
