--- a/src/AppBundle/Resources/config/routing/admin/routing_admin_pack.yml
+++ b/src/AppBundle/Resources/config/routing/admin/routing_admin_pack.yml
@@ -1,30 +1,30 @@
 admin_pack:
-    pattern:  /
+    path:  /
     defaults: { _controller: "AppBundle:Pack:index" }
 
 admin_pack_show:
-    pattern:  /{id}/show
+    path:  /{id}/show
     defaults: { _controller: "AppBundle:Pack:show" }
 
 admin_pack_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "AppBundle:Pack:new" }
 
 admin_pack_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "AppBundle:Pack:create" }
-    requirements: { _method: post }
+    methods: [ post ]
 
 admin_pack_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "AppBundle:Pack:edit" }
 
 admin_pack_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "AppBundle:Pack:update" }
-    requirements: { _method: post|put }
+    methods: [ post, put ]
 
 admin_pack_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "AppBundle:Pack:delete" }
-    requirements: { _method: post|delete }
+    methods: [ post, delete ]
