--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -1,11 +1,11 @@
 api_packs:
-    pattern: /packs/
+    path: /packs/
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:listPacks
 
 api_card:
-    pattern: /card/{card_code}.{_format}
+    path: /card/{card_code}.{_format}
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:getCard
@@ -14,13 +14,13 @@ api_card:
         _format: json
 
 api_cards:
-    pattern: /cards/
+    path: /cards/
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:listCards
 
 api_cards_pack:
-    pattern: /cards/{pack_code}.{_format}
+    path: /cards/{pack_code}.{_format}
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:listCardsByPack
@@ -29,7 +29,7 @@ api_cards_pack:
         _format: json|xml|xlsx|xls
 
 api_decklist:
-    pattern: /decklist/{decklist_id}.{_format}
+    path: /decklist/{decklist_id}.{_format}
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:getDecklist
@@ -39,7 +39,7 @@ api_decklist:
         decklist_id: \d+
 
 api_decklists_by_date:
-    pattern: /decklists/by_date/{date}.{_format}
+    path: /decklists/by_date/{date}.{_format}
     methods: [GET]
     defaults:
         _controller: AppBundle:Api:listDecklistsByDate
@@ -49,6 +49,6 @@ api_decklists_by_date:
         date: \d\d\d\d-\d\d-\d\d
 
 user_info:
-    pattern: /user/info
+    path: /user/info
     defaults:
         _controller: AppBundle:User:info
