--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -33,3 +33,13 @@ fos_oauth_server_token:
 
 fos_oauth_server_authorize:
     resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
+    
+oauth_server_auth_login:
+    path:  /oauth/v2/auth_login
+    defaults:
+        _controller: AppBundle:Security:login
+
+oauth_server_auth_login_check:
+    path:  /oauth/v2/auth_login_check
+    defaults:
+        _controller: AppBundle:Security:loginCheck
