add unique constraints on all code fields

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -118,3 +118,6 @@ AppBundle\Entity\Card:
         octgnid:
             type: string
             nullable: true
+    uniqueConstraints:
+        card_code_idx:
+            columns: [ code ]
