--- a/src/AppBundle/Resources/config/doctrine/Pack.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Pack.orm.yml
@@ -51,4 +51,7 @@ AppBundle\Entity\Pack:
             type: date
             nullable: true
             column: date_release
-        
+    uniqueConstraints:
+        pack_code_idx:
+            columns: [ code ]
+            
