importer can now import existing cards

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@
 tags
 /web/js/
 /web/css/
-/.externalToolBuilders/
-/.settings/
-/.buildpath
-/.project
-/.tags_swap
-/.idea/
+.externalToolBuilders/
+.settings/
+.buildpath
+.project
+.tags_swap
+.idea/
 .DS_Store
