--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -20,6 +20,12 @@ AppBundle\Entity\Card:
             joinColumn:
                 name: faction_id
                 referencedColumnName: id
+        upgrade:
+            targetEntity: card
+            inversedBy: cards
+            joinColumn:
+                name: upgrade_id
+                referencedColumnName: id
     oneToMany:
         reviews:
             targetEntity: Review
@@ -42,6 +48,10 @@ AppBundle\Entity\Card:
             type: string
             length: 1024
             nullable: false
+        subname:
+            type: string
+            length: 1024
+            nullable: true
         cost:
             type: smallint
             nullable: true
@@ -65,16 +75,28 @@ AppBundle\Entity\Card:
         quantity:
             type: smallint
             nullable: false
-        income:
+        will:
             type: smallint
             nullable: true
-        initiative:
+        lore:
             type: smallint
             nullable: true
-        claim:
+        strength:
             type: smallint
             nullable: true
-        reserve:
+        agility:
+            type: smallint
+            nullable: true
+        wild:
+            type: smallint
+            nullable: true
+        xp:
+            type: smallint
+            nullable: true
+        health:
+            type: smallint
+            nullable: true
+        sanity:
             type: smallint
             nullable: true
         deckLimit:
@@ -99,22 +121,6 @@ AppBundle\Entity\Card:
             type: boolean
             nullable: false
             column: is_unique
-        isLoyal:
-            type: boolean
-            nullable: false
-            column: is_loyal
-        isMilitary:
-            type: boolean
-            nullable: false
-            column: is_military
-        isIntrigue:
-            type: boolean
-            nullable: false
-            column: is_intrigue
-        isPower:
-            type: boolean
-            nullable: false
-            column: is_power
         octgnId:
             type: string
             nullable: true
