--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -14,6 +14,12 @@ AppBundle\Entity\Card:
             joinColumn:
                 name: type_id
                 referencedColumnName: id
+        subtype:
+            targetEntity: Subtype
+            inversedBy: cards
+            joinColumn:
+                name: subtype_id
+                referencedColumnName: id
         faction:
             targetEntity: Faction
             inversedBy: cards
