--- a/src/AppBundle/Resources/config/routing/routing_admin.yml
+++ b/src/AppBundle/Resources/config/routing/routing_admin.yml
@@ -13,6 +13,10 @@ AppBundle_admin_pack:
 AppBundle_admin_type:
     resource: "@AppBundle/Resources/config/routing/admin/routing_admin_type.yml"
     prefix:   /type
+ 
+AppBundle_admin_subtype:
+    resource: "@AppBundle/Resources/config/routing/admin/routing_admin_subtype.yml"
+    prefix:   /subtype
 
 AppBundle_admin_faction:
     resource: "@AppBundle/Resources/config/routing/admin/routing_admin_faction.yml"
