updated some faction references fixed doctine warnings

--- a/src/AppBundle/Resources/config/doctrine/Subtype.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Subtype.orm.yml
@@ -5,7 +5,7 @@ AppBundle\Entity\Subtype:
         cards:
             targetEntity: Card
             orderBy: {'position':'ASC'}
-            mappedBy: type
+            mappedBy: subtype
     fields:
         id:
             type: integer
