--- a/src/AppBundle/Resources/config/doctrine/Encounter.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Encounter.orm.yml
@@ -5,7 +5,7 @@ AppBundle\Entity\Encounter:
         cards:
             targetEntity: Card
             orderBy: {'position':'ASC'}
-            mappedBy: type
+            mappedBy: encounter
     fields:
         id:
             type: integer
