added first campaign tables

--- a/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
@@ -6,6 +6,10 @@ AppBundle\Entity\Cycle:
             targetEntity: Pack
             orderBy: {'position':'ASC'}
             mappedBy: cycle
+        campaigns:
+            targetEntity: Campaign
+            orderBy: {'id':'ASC'}
+            mappedBy: cycle
     fields:
         id:
             type: integer
