add resend mail command more scenario additions

--- a/src/AppBundle/Resources/config/doctrine/Scenario.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Scenario.orm.yml
@@ -29,6 +29,9 @@ AppBundle\Entity\Scenario:
             type: string
             length: 1024
             nullable: false
+        position:
+            type: smallint
+            nullable: false
     uniqueConstraints:
         scenario_code_idx:
             columns: [ code ]
