added special area for some cards

--- a/src/AppBundle/Resources/config/doctrine/Decklistslot.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Decklistslot.orm.yml
@@ -23,3 +23,7 @@ AppBundle\Entity\Decklistslot:
                 strategy: AUTO
         quantity:
             type: smallint
+        ignoreDeckRestrictions:
+            type: boolean
+            nullable: true
+            column: ignore_deck_restrictions
